<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity"
    android:id="@+id/detail_maincontent"
    android:layout_marginTop="2dp"
    android:layout_marginBottom="5dp"
    android:background="@color/colorWhite"
    android:fitsSystemWindows="true">

<android.support.constraint.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:id="@+id/imageheader"
        android:fitsSystemWindows="true"
        android:scaleType="centerCrop"
        android:layout_marginTop="20dp"
        android:layout_margin="5dp"
        android:layout_width="match_parent"
        android:layout_height="200dp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/movietitle"
        android:layout_marginLeft="@dimen/layout_margin_left"
        android:text="@string/name_movie"
        android:layout_marginTop="@dimen/layout_margin_top2"
        android:textStyle="bold"
        android:textColor="@color/colorChocolate"
        android:fontFamily="@string/fontfamily"
        android:textSize="22dp"
        app:layout_constraintTop_toBottomOf="@+id/imageheader"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/title"
        android:textStyle="bold"
        android:layout_marginLeft="@dimen/layout_margin_left"
        android:layout_marginTop="@dimen/layout_margin_top"
        android:textSize="26dp"
        app:layout_constraintTop_toBottomOf="@+id/movietitle"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/plot"
        android:layout_marginLeft="@dimen/layout_margin_left"
        android:text="@string/plot"
        android:fontFamily="@string/fontfamily"
        android:layout_marginTop="@dimen/layout_margin_top2"
        android:textStyle="bold"
        android:textSize="22dp"
        android:textColor="@color/colorChocolate"
        app:layout_constraintTop_toBottomOf="@+id/title"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/plotsynopsis"
        android:layout_marginLeft="@dimen/layout_margin_left"
        android:layout_marginTop="@dimen/layout_margin_top"
        android:fontFamily="@string/fontfamily"
        android:textSize="16dp"
        app:layout_constraintTop_toBottomOf="@+id/plot"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rating"
        android:layout_marginLeft="@dimen/layout_margin_left"
        android:text="@string/rating"
        android:layout_marginTop="@dimen/layout_margin_top2"
        android:fontFamily="@string/fontfamily"
        android:textStyle="bold"
        android:textColor="@color/colorChocolate"
        android:textSize="22dp"
        app:layout_constraintTop_toBottomOf="@+id/plotsynopsis"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/userrating"
        android:layout_marginLeft="@dimen/layout_margin_left"
        android:layout_marginTop="@dimen/layout_margin_top"
        android:fontFamily="@string/fontfamily"
        android:textSize="16dp"
        app:layout_constraintTop_toBottomOf="@+id/rating"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/release"
        android:layout_marginLeft="@dimen/layout_margin_left"
        android:text="@string/release"
        android:layout_marginTop="@dimen/layout_margin_top2"
        android:fontFamily="@string/fontfamily"
        android:textStyle="bold"
        android:textColor="@color/colorChocolate"
        android:textSize="22dp"
        app:layout_constraintTop_toBottomOf="@+id/userrating"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/releaseDate"
        android:layout_marginLeft="@dimen/layout_margin_left"
        android:layout_marginTop="@dimen/layout_margin_top"
        android:fontFamily="@string/fontfamily"
        android:textSize="16dp"
        app:layout_constraintTop_toBottomOf="@+id/release"/>

</android.support.constraint.ConstraintLayout>




</ScrollView>