<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorBackground"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".DetailActivity"
    tools:showIn="@layout/activity_detail">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/movietitle"
            android:layout_marginLeft="@dimen/layout_margin_left"
            android:text="@string/app_name"
            android:layout_marginTop="@dimen/layout_margin_top2"
            android:textStyle="bold"
            android:textSize="25dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/title"
                android:layout_marginLeft="@dimen/layout_margin_left"
                android:layout_marginTop="@dimen/layout_margin_top"
                android:padding="@dimen/padding_layout"
                android:textStyle="bold"
                android:textSize="22dp"
                android:fontFamily="@string/fontfamily"
                android:layout_below="@id/movietitle"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/plot"
                android:layout_marginLeft="@dimen/layout_margin_left"
                android:text="@string/plot"
                android:layout_marginTop="@dimen/layout_margin_top2"
                android:fontFamily="@string/fontfamily"
                android:textStyle="bold"
                android:textSize="25dp"
                android:layout_below="@id/title"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/plotsynopsis"
                android:layout_marginLeft="@dimen/layout_margin_left"
                android:layout_marginTop="@dimen/layout_margin_top"
                android:fontFamily="@string/fontfamily"
                android:padding="@dimen/padding_layout"
                android:textStyle="bold"
                android:textSize="22dp"
                android:layout_below="@id/plotsynopsis"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/rating"
                android:layout_marginLeft="@dimen/layout_margin_left"
                android:text="@string/rating"
                android:layout_marginTop="@dimen/layout_margin_top2"
                android:fontFamily="@string/fontfamily"
                android:textStyle="bold"
                android:textSize="25dp"
                android:layout_below="@id/plotsynopsis"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/userrating"
                android:layout_marginLeft="@dimen/layout_margin_left"
                android:layout_marginTop="@dimen/layout_margin_top"
                android:padding="@dimen/padding_layout"
                android:fontFamily="@string/fontfamily"
                android:textStyle="bold"
                android:textSize="22dp"
                android:layout_below="@id/rating"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/release"
                android:layout_marginLeft="@dimen/layout_margin_left"
                android:text="@string/release"
                android:layout_marginTop="@dimen/layout_margin_top2"
                android:fontFamily="@string/fontfamily"
                android:textStyle="bold"
                android:textSize="25dp"
                android:layout_below="@id/userrating"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/releaseDate"
                android:layout_marginLeft="@dimen/layout_margin_left"
                android:layout_marginTop="@dimen/layout_margin_top"
                android:fontFamily="@string/fontfamily"
                android:padding="@dimen/padding_layout"
                android:textStyle="bold"
                android:textSize="22dp"
                android:layout_below="@id/release"/>
            <ProgressBar
                android:id="@+id/pb_loading_indicator"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:visibility="invisible"
                android:indeterminate="true"
                android:layout_centerInParent="true" />
        </LinearLayout>

    </ScrollView>

</RelativeLayout>